feat: add styles

--- a/index.html
+++ b/index.html
@@ -8,73 +8,111 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<header>MARKULT*</header>
-<p>* - исключительно выражение мыслей автора.</p>
-<nav><ul>
-    <li>Суть альбома</li>
-    <li>Топ-3 трека альбома</li>
-    <li>Комментарий исполнителя</li>
-    <li>Ссылка на альбом</li>
-    <li>Мои контакты</li>
-</ul></nav>
-<hr>
+<body class="body">
+<section class="head">
+    <header>MARKULT*</header>
+    <p>* - исключительно выражение мыслей автора.</p>
+    <section class="menu">
+        <nav id="menu-head">
+            <a href="#syt-albom">Суть альбома</a>
+            <a href="#top-3">Топ-3 трека альбома</a>
+            <a href="#comment">Комментарий исполнителя</a>
+            <a href="#album">Ссылка на альбом</a>
+            <a href="#contact">Мои контакты</a>
+        </nav>
+    </section>
+</section>
+
+<!--<hr>-->
 <main>
     <section>
-<h1>Разбор альбома Markul "Sense Of Human"</h1>
+        <div class="img">
+            <img src="Img/bg.gif" alt="Sense-of-Human" class="img">
+        </div>
+    </section>
+
+    <section class="text1">
+        <div class="left">
+            <h1>Разбор альбома Markul "Sense Of Human"</h1>
+
+            <article>
+                <p><em>Макр Маркул — российский хип-хоп-исполнитель, певец, автор песен и
+                    член творческого объединения «Green Park Gang».</em></p>
+                <p>Спустя три года после выхода своего второго альбома «Great Depression»
+                    Марк возвращается с большой концептуальной работой. Все 20 треков он связал между собой единой идеей,
+                    сохранив при этом индивидуальность каждой песни, что парадоксально и важно для тех,
+                    кто не будет слушать весь альбом последовательно и погружаться в мир, созданный музыкантом.
+                    Работу над альбомом Маркул вёл с февраля этого года на протяжении 8 месяцев.
+                    Той же зимой мы услышали и первый сингл – «Бумеранг», продюсером которого выступил
+                    Куок и чьё влияние на новый альбом чувствуется достаточно сильно. После выхода трека поклонников
+                    ждал клип и мини-фильм о съёмках. Вообще, любовь Марка к подобным видео – не секрет, на его канале
+                    в разное время выходили влоги с туров, а в 2018 фильм о создании «Great Depression». И да, такая же работа
+                    выйдет и по новому альбому.
+                    1 октября вышел третий сингл с нового альбома – «Zima Blue», отсылающий к сериалу «Любовь.
+                    Смерть. Роботы». От лица робота с именем Zima Blue Марк поёт о любви и разрушении.
+                    Чтобы полностью оценить композицию советуем посмотреть 14 серию 1 сезона упомянутого сериала.
+                    Спустя неделю выходит «Syrena» и экранизация к ней. Догадки фанатов об использовании образов
+                    смертных грехов получают своё подтверждение: в клипе появляются уныние, гордость, гнев, чревоугодие,
+                    зависть, похоть и жадность. Здесь стоит отметить, что в качестве актёров выступили люди, работавшие над
+                    альбомом: OSA (обжорство), Shumno (лень), SALUKI (жадность), QUOK (зависть), Dyce (гордыня),
+                    Palagin (гнев) и сама ANIKV, отыгравшая похоть и принявшая участие в интерлюдии. Вообще, длительность
+                    релиза и его нетипичное звучание ввело многих в тупик. «Серьёзно, таким будет четвёртый релиз с альбома?»,
+                    – спрашивали они. Но это не самостоятельный трек, а только интро.
+                    Видимо, так Марк решил задать определённый тон своему релизу. Согласитесь, необычно
+                    для русскоязычного музыканта выпускать интро к альбому без самого альбома. Зачтём за интересный
+                    эксперимент, который к тому же дополнился качественным неонуарным видеорядом.</p>
+            </article>
+        </div>
+    </section>
+
+    <section id="syt-albom">
+        <h2>Суть альбома</h2>
     </section>
     <article>
-    <p><em>Макр Маркул — российский хип-хоп-исполнитель, певец, автор песен и
-    член творческого объединения «Green Park Gang».</em></p>
-    <p>У Markul вышел новый альбом "Sense Of Human".
-    Релиз выходит ровно три года спустя после "Great Depression" и должен продолжить его историю.
-    Тот альбом превратил Марка в новую звезду с солдаутами на крупнейших площадках.
-    Это был альбом, полный холодного романтизма, песен о крахе отношений и ментальных проблемах и звучания,
-    вдохновленного R&B и афросвингом.
+        <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:
+            гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.
+            Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>
     </article>
-    <section>
-    <h2>Суть альбома</h2>
-    </section>
-    <article>
-    <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:
-    гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.
-    Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>
-    </article>
-    <section>
+
+    <section id="top-3" class="top-3">
         <h2>Топ-3 трека альбома</h2>
+        <img src="Img/Syrena.jpg" class="img2">
     </section>
-<ol>
-    <li>Syrena</li>
-    <li>Cuba Libre</li>
-    <li>Полёт нормальный</li>
-</ol>
-<pre>
+    <ol>
+        <li>Syrena</li>
+        <li>Cuba Libre</li>
+        <li>Полёт нормальный</li>
+    </ol>
+    <pre>
     <")
     ( >\
      " \\
          \
 </pre>
-    <section>
-    <h2>Комментарий исполнителя</h2>
+    <section id="comment">
+        <h2>Комментарий исполнителя</h2>
     </section>
     <article>
-    <p><q>Мне хотелось сделать киношный звук.
-        Это прослеживается в ряде песен, эпичных переходах, приемах, напоминающих озвучку фильмов</q>
-        , — говорит о выбранном звучании Markul.</p>
+        <p><q>Мне хотелось сделать киношный звук.
+            Это прослеживается в ряде песен, эпичных переходах, приемах, напоминающих озвучку фильмов</q>
+            , — говорит о выбранном звучании Markul.</p>
     </article>
-    <section>
+    <section id="album">
         <h2>Ссылка на альбом</h2>
     </section>
     <a href="https://genius.com/albums/Markul/Sense-of-human" target="_blank"> Sense-of-human </a>
 </main>
 <hr>
-<footer>Мои контакты:
-<ul type="square">
-    <li>Телефон: +7 (***) *** - ** - **</li>
-    <li>Инстаграм: <a href="https://www.instagram.com/ukalria" target="_blank">ukaleria</a> </li>
-</ul>
+<footer id="contact" class="down">Мои контакты:
+    <ul type="square">
+        <li>Телефон: +7 (***) *** - ** - **</li>
+        <li>Инстаграм: <a href="https://www.instagram.com/ukalria" target="_blank">ukaleria</a> </li>
+    </ul>
 </footer>
 </body>
 </html>
+
+
 
