--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body class="body">
 <section class="head">
@@ -16,10 +18,10 @@
     <p>* - исключительно выражение мыслей автора.</p>
     <section class="menu">
         <nav id="menu-head">
-            <a href="#syt-albom">Суть альбома</a>
-            <a href="#top-3">Топ-3 трека альбома</a>
-            <a href="#comment">Комментарий исполнителя</a>
-            <a href="#album">Ссылка на альбом</a>
+            <a href="SytAlboma.html">Суть альбома</a>
+            <a href="Top3.html">Топ-3 трека альбома</a>
+            <a href="Comments.html">Комментарий исполнителя</a>
+            <a href="LinkOnAlbum.html">Ссылка на альбом</a>
             <a href="#contact">Мои контакты</a>
         </nav>
     </section>
@@ -27,82 +29,78 @@
 
 <!--<hr>-->
 <main>
-    <section>
-        <div class="img">
-            <img src="Img/bg.gif" alt="Sense-of-Human" class="img">
-        </div>
-    </section>
+    <div class="container">
+        <section>
+            <div class="img">
+                <img src="Img/bg.gif" alt="Sense-of-Human" class="img">
+            </div>
+        </section>
 
-    <section class="text1">
-        <div class="left">
-            <h1>Разбор альбома Markul "Sense Of Human"</h1>
+        <section class="text1">
+            <div class="left">
+                <h1>Разбор альбома Markul "Sense Of Human"</h1>
 
-            <article>
-                <p><em>Макр Маркул — российский хип-хоп-исполнитель, певец, автор песен и
-                    член творческого объединения «Green Park Gang».</em></p>
-                <p>Спустя три года после выхода своего второго альбома «Great Depression»
-                    Марк возвращается с большой концептуальной работой. Все 20 треков он связал между собой единой идеей,
-                    сохранив при этом индивидуальность каждой песни, что парадоксально и важно для тех,
-                    кто не будет слушать весь альбом последовательно и погружаться в мир, созданный музыкантом.
-                    Работу над альбомом Маркул вёл с февраля этого года на протяжении 8 месяцев.
-                    Той же зимой мы услышали и первый сингл – «Бумеранг», продюсером которого выступил
-                    Куок и чьё влияние на новый альбом чувствуется достаточно сильно. После выхода трека поклонников
-                    ждал клип и мини-фильм о съёмках. Вообще, любовь Марка к подобным видео – не секрет, на его канале
-                    в разное время выходили влоги с туров, а в 2018 фильм о создании «Great Depression». И да, такая же работа
-                    выйдет и по новому альбому.
-                    1 октября вышел третий сингл с нового альбома – «Zima Blue», отсылающий к сериалу «Любовь.
-                    Смерть. Роботы». От лица робота с именем Zima Blue Марк поёт о любви и разрушении.
-                    Чтобы полностью оценить композицию советуем посмотреть 14 серию 1 сезона упомянутого сериала.
-                    Спустя неделю выходит «Syrena» и экранизация к ней. Догадки фанатов об использовании образов
-                    смертных грехов получают своё подтверждение: в клипе появляются уныние, гордость, гнев, чревоугодие,
-                    зависть, похоть и жадность. Здесь стоит отметить, что в качестве актёров выступили люди, работавшие над
-                    альбомом: OSA (обжорство), Shumno (лень), SALUKI (жадность), QUOK (зависть), Dyce (гордыня),
-                    Palagin (гнев) и сама ANIKV, отыгравшая похоть и принявшая участие в интерлюдии. Вообще, длительность
-                    релиза и его нетипичное звучание ввело многих в тупик. «Серьёзно, таким будет четвёртый релиз с альбома?»,
-                    – спрашивали они. Но это не самостоятельный трек, а только интро.
-                    Видимо, так Марк решил задать определённый тон своему релизу. Согласитесь, необычно
-                    для русскоязычного музыканта выпускать интро к альбому без самого альбома. Зачтём за интересный
-                    эксперимент, который к тому же дополнился качественным неонуарным видеорядом.</p>
-            </article>
-        </div>
-    </section>
+                <article>
+                    <p><em>Макр Маркул — российский хип-хоп-исполнитель, певец, автор песен и
+                        член творческого объединения «Green Park Gang».</em></p>
+                    <p>Спустя три года после выхода своего второго альбома «Great Depression»
+                        Марк возвращается с большой концептуальной работой. Все 20 треков он связал между собой единой идеей,
+                        сохранив при этом индивидуальность каждой песни, что парадоксально и важно для тех,
+                        кто не будет слушать весь альбом последовательно и погружаться в мир, созданный музыкантом.
+                        Работу над альбомом Маркул вёл с февраля этого года на протяжении 8 месяцев.
+                        Той же зимой мы услышали и первый сингл – «Бумеранг», продюсером которого выступил
+                        Куок и чьё влияние на новый альбом чувствуется достаточно сильно. После выхода трека поклонников
+                        ждал клип и мини-фильм о съёмках. Вообще, любовь Марка к подобным видео – не секрет, на его канале
+                        в разное время выходили влоги с туров, а в 2018 фильм о создании «Great Depression». И да, такая же работа
+                        выйдет и по новому альбому.
+                        1 октября вышел третий сингл с нового альбома – «Zima Blue», отсылающий к сериалу «Любовь.
+                        Смерть. Роботы». От лица робота с именем Zima Blue Марк поёт о любви и разрушении.
+                        Чтобы полностью оценить композицию советуем посмотреть 14 серию 1 сезона упомянутого сериала.
+                        Спустя неделю выходит «Syrena» и экранизация к ней. Догадки фанатов об использовании образов
+                        смертных грехов получают своё подтверждение: в клипе появляются уныние, гордость, гнев, чревоугодие,
+                        зависть, похоть и жадность. Здесь стоит отметить, что в качестве актёров выступили люди, работавшие над
+                        альбомом: OSA (обжорство), Shumno (лень), SALUKI (жадность), QUOK (зависть), Dyce (гордыня),
+                        Palagin (гнев) и сама ANIKV, отыгравшая похоть и принявшая участие в интерлюдии. Вообще, длительность
+                        релиза и его нетипичное звучание ввело многих в тупик. «Серьёзно, таким будет четвёртый релиз с альбома?»,
+                        – спрашивали они. Но это не самостоятельный трек, а только интро.
+                        Видимо, так Марк решил задать определённый тон своему релизу. Согласитесь, необычно
+                        для русскоязычного музыканта выпускать интро к альбому без самого альбома. Зачтём за интересный
+                        эксперимент, который к тому же дополнился качественным неонуарным видеорядом.</p>
+                </article>
+            </div>
+        </section>
 
-    <section id="syt-albom">
-        <h2>Суть альбома</h2>
-    </section>
-    <article>
-        <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:
-            гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.
-            Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>
-    </article>
+<!--        <section id="syt-albom" class="syt">-->
+<!--            <h2>Суть альбома</h2>-->
+<!--        </section>-->
+<!--        <article>-->
+<!--            <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:-->
+<!--                гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.-->
+<!--                Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>-->
+<!--        </article>-->
 
-    <section id="top-3" class="top-3">
-        <h2>Топ-3 трека альбома</h2>
-        <img src="Img/Syrena.jpg" class="img2">
-    </section>
-    <ol>
-        <li>Syrena</li>
-        <li>Cuba Libre</li>
-        <li>Полёт нормальный</li>
-    </ol>
-    <pre>
-    <")
-    ( >\
-     " \\
-         \
-</pre>
-    <section id="comment">
-        <h2>Комментарий исполнителя</h2>
-    </section>
-    <article>
-        <p><q>Мне хотелось сделать киношный звук.
-            Это прослеживается в ряде песен, эпичных переходах, приемах, напоминающих озвучку фильмов</q>
-            , — говорит о выбранном звучании Markul.</p>
-    </article>
-    <section id="album">
-        <h2>Ссылка на альбом</h2>
-    </section>
-    <a href="https://genius.com/albums/Markul/Sense-of-human" target="_blank"> Sense-of-human </a>
+<!--        <section id="top-3">-->
+<!--            <h2>Топ-3 трека альбома</h2>-->
+<!--            <img src="Img/Syrena.jpg" class="img2">-->
+<!--        </section>-->
+<!--        <ol class="textTop3">-->
+<!--            <li>Syrena</li>-->
+<!--            <li>Cuba Libre</li>-->
+<!--            <li>Полёт нормальный</li>-->
+<!--        </ol>-->
+<!--        <section id="comment" class="comment">-->
+<!--            <h2>Комментарий исполнителя</h2>-->
+<!--        </section>-->
+<!--        <article>-->
+<!--            <p><q>Мне хотелось сделать киношный звук.-->
+<!--                Это прослеживается в ряде песен, эпичных переходах, приемах, напоминающих озвучку фильмов</q>-->
+<!--                , — говорит о выбранном звучании Markul.</p>-->
+<!--        </article>-->
+<!--        <section id="album">-->
+<!--            <h2>Ссылка на альбом</h2>-->
+<!--        </section>-->
+<!--        <a href="https://genius.com/albums/Markul/Sense-of-human" target="_blank"> Sense-of-human </a>-->
+    </div>
 </main>
 <hr>
 <footer id="contact" class="down">Мои контакты:
@@ -113,6 +111,3 @@
 </footer>
 </body>
 </html>
-
-
-
