feat: add lab4-5

--- a/html/LinkOnAlbum.html
+++ b/html/LinkOnAlbum.html
@@ -9,8 +9,9 @@
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="LinkOnAlbum.css">
+    <link rel="stylesheet" href="../css/LinkOnAlbum.css">
     <link rel="stylesheet" href="LinkOnAlbum.scss">
+
 </head>
 
 <body class="body">
@@ -22,9 +23,10 @@
             <nav id="menu-head">
                 <a href="SytAlboma.html">Суть альбома</a>
                 <a href="Top3.html">Топ-3 трека альбома</a>
-                <a href="Comments.html">Комментарий исполнителя</a>
+                <a href="../Img/Comments.html">Комментарий исполнителя</a>
                 <a href="index.html">Ссылка на альбом</a>
                 <a href="index.html#contact">Мои контакты</a>
+                <a href="ToDo.html">Лист дел</a>
             </nav>
         </section>
     </section>
