--- a/html/SytAlboma.html
+++ b/html/SytAlboma.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Comments.css">
+    <link rel="stylesheet" href="../css/SytAlboma.css">
 </head>
 <body class="body">
 <div class="container">
@@ -18,24 +18,26 @@
         <p>* - исключительно выражение мыслей автора.</p>
         <section class="menu">
             <nav id="menu-head">
-                <a href="SytAlboma.html">Суть альбома</a>
+                <a href="index.html">Суть альбома</a>
                 <a href="Top3.html">Топ-3 трека альбома</a>
-                <a href="index.html">Комментарий исполнителя</a>
-                <a href=LinkOnAlbum.html>Ссылка на альбом</a>
+                <a href="../Img/Comments.html">Комментарий исполнителя</a>
+                <a href="LinkOnAlbum.html">Ссылка на альбом</a>
                 <a href="index.html#contact">Мои контакты</a>
+                <a href="ToDo.html">Лист дел</a>
             </nav>
         </section>
     </section>
     <main>
-        <section id="comment" class="comment">
-            <h2>Комментарий исполнителя</h2>
+        <section id="syt-albom" class="syt">
+            <h2>Суть альбома</h2>
         </section>
-        <article class="commentText">
-            <p><q>Мне хотелось сделать киношный звук.
-                Это прослеживается в ряде песен, эпичных переходах, приемах, напоминающих озвучку фильмов</q>
-                , — говорит о выбранном звучании Markul.</p>
+        <article class="text">
+            <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:
+                гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.
+                Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>
         </article>
     </main>
+
 </div>
 </body>
 </html>
