--- a/html/Top3.html
+++ b/html/Top3.html
@@ -9,34 +9,35 @@
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="SytAlboma.css">
+    <link rel="stylesheet" href="../css/Top3.css">
 </head>
-<body class="body">
-<div class="container">
+    <body class="body">
+    <div class="container">
     <section class="head">
         <header>MARKULT*</header>
         <p>* - исключительно выражение мыслей автора.</p>
         <section class="menu">
             <nav id="menu-head">
-                <a href="index.html">Суть альбома</a>
-                <a href="Top3.html">Топ-3 трека альбома</a>
-                <a href="Comments.html">Комментарий исполнителя</a>
+                <a href="SytAlboma.html">Суть альбома</a>
+                <a href="index.html">Топ-3 трека альбома</a>
+                <a href="../Img/Comments.html">Комментарий исполнителя</a>
                 <a href="LinkOnAlbum.html">Ссылка на альбом</a>
                 <a href="index.html#contact">Мои контакты</a>
+                <a href="ToDo.html">Лист дел</a>
             </nav>
         </section>
     </section>
     <main>
-        <section id="syt-albom" class="syt">
-            <h2>Суть альбома</h2>
+        <section id="top-3" class="top3">
+            <h2>Топ-3 трека альбома</h2>
+            <img src="../Img/Syrena.jpg" class="img2">
         </section>
-        <article class="text">
-            <p><strong>"Sense Of Human"</strong> сталкивает героя песен артиста с семью смертными грехами:
-                гордыней, жадностью, гневом, завистью, похотью, обжорством и леностью.
-                Markul считает их обычными слабостями и желаниями и через них пробует показать, что значит быть человеком.</p>
-        </article>
+        <ol class="textTop3">
+            <li>Syrena</li>
+            <li>Cuba Libre</li>
+            <li>Полёт нормальный</li>
+        </ol>
     </main>
-
-</div>
+    </div>
 </body>
 </html>
