--- a/html/index.html
+++ b/html/index.html
@@ -9,22 +9,24 @@
     <meta name="keywords" content="album" />
     <meta name="description" content="Album of Markul" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/loadTime.js"></script>
 </head>
 <body class="body">
 <section class="head">
     <header>MARKULT*</header>
     <p>* - исключительно выражение мыслей автора.</p>
-    <section class="menu">
-        <nav id="menu-head">
+    <section class="menu" id="menu-head">
+        <nav >
             <a href="SytAlboma.html">Суть альбома</a>
             <a href="Top3.html">Топ-3 трека альбома</a>
-            <a href="Comments.html">Комментарий исполнителя</a>
+            <a href="../Img/Comments.html">Комментарий исполнителя</a>
             <a href="LinkOnAlbum.html">Ссылка на альбом</a>
             <a href="#contact">Мои контакты</a>
+            <a href="ToDo.html">Лист дел</a>
         </nav>
     </section>
+<!--    <script type="text/javascript">shineLinks('menu-head');</script>-->
 </section>
 
 <!--<hr>-->
@@ -32,7 +34,7 @@
     <div class="container">
         <section>
             <div class="img">
-                <img src="Img/bg.gif" alt="Sense-of-Human" class="img">
+                <img src="../Img/bg.gif" alt="Sense-of-Human" class="img">
             </div>
         </section>
 
@@ -108,6 +110,7 @@
         <li>Телефон: +7 (***) *** - ** - **</li>
         <li>Инстаграм: <a href="https://www.instagram.com/ukalria" target="_blank">ukaleria</a> </li>
     </ul>
+    <div id="loadTime" class="color"></div>
 </footer>
 </body>
 </html>
