--- a/html/LinkOnAlbum.html
+++ b/html/LinkOnAlbum.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Usoltseva VI</title>
+    <title>Markul</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/LinkOnAlbum.css">
     <link rel="stylesheet" href="LinkOnAlbum.scss">
+    <link rel="icon" href="../Img/Syrena.jpg">
 
 </head>
 
@@ -22,8 +23,8 @@
         <section class="menu">
             <nav id="menu-head">
                 <a href="SytAlboma.html">Суть альбома</a>
-                <a href="Top3.html">Топ-3 трека альбома</a>
-                <a href="../Img/Comments.html">Комментарий исполнителя</a>
+                <a href="Top3.html">Топ треки</a>
+                <a href="Comments.html">Комментарий исполнителя</a>
                 <a href="index.html">Ссылка на альбом</a>
                 <a href="index.html#contact">Мои контакты</a>
                 <a href="ToDo.html">Лист дел</a>
