--- a/html/Top3.html
+++ b/html/Top3.html
@@ -2,42 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Usoltseva VI</title>
+    <title>Markul</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="album" />
-    <meta name="description" content="Album of Markul" />
+    <meta name="keywords" content="album"/>
+    <meta name="description" content="Album of Markul"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/Top3.css">
+    <script src="../js/topCharts.js"></script>
+    <link rel="icon" href="../Img/Syrena.jpg">
+
+
 </head>
-    <body class="body">
-    <div class="container">
+<body class="body">
+<div class="container">
     <section class="head">
         <header>MARKULT*</header>
         <p>* - исключительно выражение мыслей автора.</p>
         <section class="menu">
             <nav id="menu-head">
                 <a href="SytAlboma.html">Суть альбома</a>
-                <a href="index.html">Топ-3 трека альбома</a>
-                <a href="../Img/Comments.html">Комментарий исполнителя</a>
+                <a href="index.html">Топ треки</a>
+                <a href="Comments.html">Комментарий исполнителя</a>
                 <a href="LinkOnAlbum.html">Ссылка на альбом</a>
                 <a href="index.html#contact">Мои контакты</a>
                 <a href="ToDo.html">Лист дел</a>
             </nav>
         </section>
     </section>
+
+
     <main>
         <section id="top-3" class="top3">
-            <h2>Топ-3 трека альбома</h2>
-            <img src="../Img/Syrena.jpg" class="img2">
+            <h2>Топ треки</h2>
         </section>
-        <ol class="textTop3">
-            <li>Syrena</li>
-            <li>Cuba Libre</li>
-            <li>Полёт нормальный</li>
-        </ol>
+        <div class="row">
+            <img style="justify-content: center;height: 20em; width: 35em" src="../Img/preloader.gif" alt="" id="preloader">
+        </div>
+        <div id="posts">
+
+        </div>
     </main>
-    </div>
+
+
+</div>
 </body>
 </html>
