--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Usoltseva VI</title>
+    <title>Markul</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,6 +10,7 @@
     <meta name="description" content="Album of Markul" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../Img/Syrena.jpg">
     <script src="../js/loadTime.js"></script>
 </head>
 <body class="body">
@@ -17,10 +18,10 @@
     <header>MARKULT*</header>
     <p>* - исключительно выражение мыслей автора.</p>
     <section class="menu" id="menu-head">
-        <nav >
+        <nav>
             <a href="SytAlboma.html">Суть альбома</a>
-            <a href="Top3.html">Топ-3 трека альбома</a>
-            <a href="../Img/Comments.html">Комментарий исполнителя</a>
+            <a href="Top3.html">Топ треки</a>
+            <a href="Comments.html">Комментарий исполнителя</a>
             <a href="LinkOnAlbum.html">Ссылка на альбом</a>
             <a href="#contact">Мои контакты</a>
             <a href="ToDo.html">Лист дел</a>
